# rib

./: Cargo.toml  README.md
src/: animation.rs  lib.rs  skeleton.rs  transform.rs  utils.rs  vertices.rs
test/human/: death.dae  run.dae  walk.dae
test/spider/: spider.blend  walk.dae
test/tube/: tube.dae
