[package]
name = "rib"
version = "0.1.0"
authors = ["Matthieu Baumann <matthieu.baumann@astro.unistra.fr>"]
edition = "2018"

[dependencies]
collada = { branch = "master", git = "https://github.com/bmatthieu3/piston_collada.git" }
nalgebra = {version = "0.23.1", features = ["serde-serialize"]}
serde = { version = "*", features = ["derive"] }
bincode = "1.3.1"